--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,7 +1,7 @@
 /* 基本設定 */
 body {
   font-family: 'Playfair Display', serif;
-  background-color: #f5f5f0;
+  background-color: #f5ebe0;
   color: #6a4e3b;
 }
 
@@ -25,8 +25,8 @@ body {
   color: #8c8373;
   background-color: #eee;
   border: 1px solid #ddd;
-  border-radius: 3px;
   padding: 3px 15px;
+  width: 100px;
   text-decoration: none;
 }
 
@@ -69,8 +69,7 @@ body {
 .form__input {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  border: none;
   background-color: #f7f7f7;
   font-size: 0.8rem;
   color: #6a4e3b;
@@ -93,7 +92,6 @@ body {
   background-color: #8c8373;
   color: white;
   border: none;
-  border-radius: 3px;
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
