--- a/src/public/css/auth/admin.css
+++ b/src/public/css/auth/admin.css
@@ -328,7 +328,7 @@ input[type="date"]::-moz-calendar-picker-indicator {
   width: 100%;
   height: 100%;
   display: none;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
   overflow: auto;
 }
 
@@ -338,9 +338,11 @@ input[type="date"]::-moz-calendar-picker-indicator {
 
 .modal__content {
   background-color: #fff;
+  border: 1px solid #c0b5b5;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin: 5% auto;
-  padding: 60px;
-  width: 50%;
+  padding: 70px;
+  width: 55%;
   position: relative;
 }
 
@@ -358,13 +360,14 @@ input[type="date"]::-moz-calendar-picker-indicator {
 
 .modal__close {
   position: absolute;
-  top: 10px;
-  right: 20px;
-  text-decoration: none;
-  font-size: 2rem;
-  font-weight: bold;
+  top: 20px;
+  right: 30px;
   color: #957760;
   transition: color 0.3s;
+}
+
+.bi-x-circle {
+  font-size: 1.6rem;
 }
 
 .modal__close:hover {
